# Web-server-Report-websocket

./: .env.example  .env.railway.example  .gitignore  .railwayignore  Cargo.toml  Dockerfile  LICENSE  README.md  nixpacks.toml  railway.toml
document/: DEPLOYMENT_GUIDE.md  LEADER_ELECTION_SUMMARY.md  RAILWAY_QUICKSTART.md  README.md
src/: lib.rs  main.rs  performance.rs
src/dto/: mod.rs  websocket.rs
src/service_islands/: mod.rs
src/service_islands/layer1_infrastructure/: mod.rs
src/service_islands/layer1_infrastructure/cache_system_island/: README.md  cache_manager.rs  l1_cache.rs  l2_cache.rs  mod.rs
src/service_islands/layer1_infrastructure/distributed_coordination/: leader_election.rs  mod.rs
src/service_islands/layer2_external_services/: mod.rs
src/service_islands/layer2_external_services/external_apis_island/: api_constants.rs  circuit_breaker.rs  crypto_fetchers.rs  market_data_api.rs  market_data_core.rs  market_fetchers.rs  mod.rs  models.rs
src/service_islands/layer2_external_services/external_apis_island/api_aggregator/: aggregator_core.rs  crypto_fetchers.rs  dashboard_aggregator.rs  market_fetchers.rs  mod.rs
src/service_islands/layer3_communication/: mod.rs
src/service_islands/layer3_communication/layer2_adapters/: README.md  api_aggregator_adapter.rs  market_data_adapter.rs  market_data_adapter.rs.backup  mod.rs
src/service_islands/layer3_communication/websocket_service/: broadcast_service.rs  connection_manager.rs  handlers.rs  market_data_streamer.rs  message_handler.rs  mod.rs
